
13-09-2023: Started syncing transform detail view values. Finished transform detail view. Organized build macro as predefined. Now there are only WITH_EDITOR and WITH_RELEASE.
Started adding detail GUI class as well, simply wrapped annoying GUI code.

14-09-2023: Started adding simple reflection system, it at least let me get member/type in class. By using reflection, detail GUI can be simpler to do.
Now the detail view implementation is good enough. I can carry on the other details.

16-09-2023: Started adding detail GUI for other components. Applied detail views to all components except the mesh renderer.

17-09-2023: Started adding GUI for mesh component. At least make it choose visibility and referencing meshes/materials for now.
Added some engine definitions for some types. The next is to solve the syncing issue of detail GUIs.
Also fixed the light attenuation noise artifact when the point light radius is small.
Next is to deal with the change of material from a mesh renderer. The shader needs to be reinitialized.

18-09-2023: Fulfilled the material detail view selection behavior. Refactored the material shader codes in PrepareRenderingShaders(), reuse a few code at least.

19-09-2023: Added constrainted render output. It looks better when resizing window. This won't work in fullscreen mode of course.

20-09-2023: Better named the UHGraphNodeType and UHGraphPinType enum. Organized material parameter collection in MaterialNode class.
Applied the new data structured for RT material data, this should also be good for compile-free parameters.
Tried to work on compile-free for parameter changes, but the edit control somehow didn't send the message. So I use the update method, better than nothing.
Completed the compile-free parameter nodes, but RT material data can be improved. Finished multiple output nodes support as well!
Another huge change today, I managed to fix some dangling objects issue too.