@@ -30,3 +30,4 @@ bParallelSubmission=1
 ParallelThreads=8
 RTDirectionalShadowQuality=1
 bEnableAsyncCompute=1
+bEnableHDR=0
